--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -23,6 +25,7 @@
       "react-app/jest"
     ]
   },
+  "prettier": "@onr/prettier-config",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -34,5 +37,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@onr/prettier-config": "^1.1.1",
+    "gh-pages": "^3.2.3"
+  },
+  "homepage": "http://appletan9797.github.io/todo"
 }
