--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://appletan9797.github.io/to-do",
   "name": "to-do",
   "version": "0.1.0",
   "private": true,
@@ -12,12 +13,12 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +42,5 @@
   "devDependencies": {
     "@onr/prettier-config": "^1.1.1",
     "gh-pages": "^3.2.3"
-  },
-  "homepage": "http://appletan9797.github.io/todo"
+  }
 }
