--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://appletan9797.github.io/to-do",
+  "homepage": "http://appletan9797.github.io/todo",
   "name": "to-do",
   "version": "0.1.0",
   "private": true,
